FIXED - There is a bit too much space between the courses and viagens sections on the home page. Maybe the same amount of space between the videos and the courses section should be in between the courses and viagens.

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -159,6 +159,11 @@ html
 	}
 }
 
+#landing-travel-title
+{
+  margin-top: 0em;
+}
+
 //------------------------------------------------------------------------------
 // METHODOLOGY
 //------------------------------------------------------------------------------
